--- a/index.html
+++ b/index.html
@@ -102,13 +102,41 @@
 		Praesent tempus feugiat odio nec pellentesque. Donec vel imperdiet dui, ac blandit urna. Vivamus urna quam, consequat vel consequat non, sagittis in lorem. Donec ultrices felis mollis orci pellentesque, vulputate convallis risus pharetra. Cras efficitur quis sem ac blandit. Quisque cursus, ex nec pretium volutpat, nulla urna interdum ipsum, in rhoncus elit urna vel justo. Integer posuere mi eu nunc elementum porttitor. Suspendisse at risus urna. Quisque fermentum venenatis elementum. Integer sodales magna mauris, a tincidunt urna molestie molestie. Pellentesque placerat ex in rutrum mollis. Suspendisse sed ex ligula.<br><br>
 		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
 	</div>
-		<div class="content hideme showMeRight" id="article5">
+	<div class="content hideme showMeRight" id="article5">
 		<h1>Art and music</h1>
-		<h3>Why the shit, how the shit, when the shit</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ex pulvinar, accumsan nunc non, gravida lectus. Fusce pellentesque lorem at neque placerat tristique. Praesent ut rutrum velit. Curabitur sed dolor mauris. Maecenas sit amet magna ipsum. Nunc varius hendrerit mi, quis blandit libero pretium volutpat. Maecenas elit lectus, porttitor eget interdum interdum, rutrum sed lacus. Duis ut diam at augue accumsan varius at vitae mi. Duis faucibus magna tortor, et congue ex finibus sit amet. Donec eget massa eu nunc porta maximus in placerat ex. Nam eget consequat dolor, eget convallis est.<br><br>
-		Etiam sed lectus eu odio consequat cursus sed sit amet risus. Maecenas libero mauris, venenatis sed efficitur non, pulvinar vitae augue. Nam vestibulum pulvinar est et efficitur. Maecenas id commodo turpis. Proin vitae turpis mollis, sagittis nunc ac, auctor nulla. Etiam fermentum sem sollicitudin, mattis erat vitae, iaculis est. Cras blandit quis nisl eget luctus. In hac habitasse platea dictumst. Duis commodo mi et ipsum bibendum ultrices. Duis vitae gravida felis. Pellentesque sed turpis massa. Suspendisse suscipit diam ut suscipit gravida.<br><br>
-		aesent tempus feugiat odio nec pellentesque. Donec vel imperdiet dui, ac blandit urna. Vivamus urna quam, consequat vel consequat non, sagittis in lorem. Donec ultrices felis mollis orci pellentesque, vulputate convallis risus pharetra. Cras efficitur quis sem ac blandit. Quisque cursus, ex nec pretium volutpat, nulla urna interdum ipsum, in rhoncus elit urna vel justo. Integer posuere mi eu nunc elementum porttitor. Suspendisse at risus urna. Quisque fermentum venenatis elementum. Integer sodales magna mauris, a tincidunt urna molestie molestie. Pellentesque placerat ex in rutrum mollis. Suspendisse sed ex ligula.<br><br>
-		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
+	<h3>Romantic Era Music and Art in England</h3>
+	     <p> With a bigger focus on the Art aspect. </p>
+	  	  <h3> Music </h3>
+		<p>The music during the Romantic era became a lot more emotional and dramatic; it also expanded into philosophical themes.<br> Music written during this time could have had a meaning of revolting against the political and social norm during the previous time (The Age of Enlightment)</p>
+			<p>While there were most famous composers during this era, this article will have a focus on the English composers.</p>
+		<p>The music during the romantic period had two major figures those being </p>
+
+		<p> <h3>John Field born 1782-1837</h3>  </p>
+		     <p> John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
+		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
+		Muzio Celmenti born 1752 - 1832<p>
+		<p>Muzio was one of the major figures during the romantic period in the world of music. . He was the composer of piano music, chamber music, as well as symphonies.</p> they also did concerts in notable cities as Paris and St. Petersburg.</p>
+		<p> Clementi’s most notable work is the fact that he changed the way you could play piano as he was noted to be the first to create the compositions capable of expressing the entire capabilities</p>
+		<p> His works were often made as Piano sonata (which is works made for solo piano players) and he made around 100 of them, while other composers might have been more famous than Clementi his work was considered a lot harder to play than those made of Mozart.</p>
+
+
+		That is a small bit about the music of the romantic period. In the next part of the article, I am going to talk about the art during romantic period
+
+		<p> <h3>Art</h3> </p>
+		    <p> One of the bigger art forms that you could find during the Romantic period is Marine art.</p>
+		<p> Marine art became quite big during the romantic era because travel by ship became a lot more common and the fact that England had quite the geographical form to make just marine art <br>(considering England is an island with a lot of water around it)
+		<p>Marine art has a big focus on the marine side of the world with a big focus on the ships and the sea; you could put them into three different categories of styles wich are : </p>
+
+		<p> <h3> Portraits with focus on the Ships </h3> is a style focused on ships, they were popular throughout the Romantic era. Ship portraits were, as stated by the name, focused entirely on the ship, rather than on the surrounding sea, <br> although the best known of the ship portraitists strove to carry out the full potential of the surrounding area
+		    </p>
+		<h3>Paintings of ships at sea. </h3> <p>This category is a bit different from the others because usually when you made these paintings you used either small boats or big vessels.</p>
+		 <p> A major thing about the two different ship sizes is that they were made depending on the surrounding area, which means that if it was a smaller area they could not make the ships big because it would not capture all the details then.</p>
+		     It depended more on the area they were in, as they wanted to capture the entire area in full detail.  Some artist choose to be on board the ship while painting the ships while at sea, the artist would usually travel alongside explorers.</p>
+
+		<p>Other artist would stay on the coast, which meant they would capture less big ships and more fishing boats and the life of them instead of the bigger explorer vessels </p>
+
+		<h3>Inshore</h3> <p>were often paintings of smaller vessels as it was harder for bigger ships to be close to shore. These were more common than paintings of large ships at sea because they only required a <br>smaller ship with a shore to make while the bigger ships usually required you to be on open sea or at harbors. </p>
+		<p> They would also be cheaper because they did not require the same amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era</p>e they did not require the same amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era</p>e amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era</p>did not require the same amount of time as the other ones did which caused them to be a bit more popular during the romantic era</p>	
 	</div>
 	
 	<script>
