--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			<a class="nav_main_link" id="society" href="#article2">Society</a>
 			<a class="nav_main_link" id="science" href="#article3">Science</a>
 			<a class="nav_main_link" id="woman" href="#article4">Role of Women</a>
-			<a class="nav_main_link" id="art" href="#article5">Art and Music</a>
+			<a class="nav_main_link" id="music" href="#article5">Music</a>
+			<a class="nav_main_link" id="art" href="#article6">Art</a>
 		</header>
 	</div>
 	<div id="header">
@@ -103,7 +104,7 @@
 		Praesent posuere a dui sit amet porttitor. Pellentesque vehicula elit id arcu ultricies, eu laoreet risus viverra. Cras at ullamcorper eros. Donec maximus suscipit ex, hendrerit posuere nisi maximus ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae dui at enim congue consequat quis et nisl. Vestibulum semper consectetur nulla sit amet efficitur. Nullam vestibulum gravida odio non accumsan. Mauris molestie aliquet erat sit amet tempor. Ut et nulla velit. Cras fermentum lorem at purus imperdiet dictum. Morbi et viverra sem. In aliquam orci turpis, id posuere ipsum scelerisque eget. Ut sed bibendum odio. Praesent gravida mi quis cursus consectetur.</p>
 	</div>
 	<div class="content hideme showMeRight" id="article5">
-		<h1>Art and music</h1>
+		<h1>Music</h1>
 	<h3>Romantic Era Music and Art in England</h3>
 	     <p> With a bigger focus on the Art aspect. </p>
 	  	  <h3> Music </h3>
@@ -121,8 +122,9 @@
 
 
 		That is a small bit about the music of the romantic period. In the next part of the article, I am going to talk about the art during romantic period
-
-		<p> <h3>Art</h3> </p>
+	</div>
+	<div class="content hideme showMeLeft" id="article6">
+		<h1>Art</h1>
 		    <p> One of the bigger art forms that you could find during the Romantic period is Marine art.</p>
 		<p> Marine art became quite big during the romantic era because travel by ship became a lot more common and the fact that England had quite the geographical form to make just marine art <br>(considering England is an island with a lot of water around it)
 		<p>Marine art has a big focus on the marine side of the world with a big focus on the ships and the sea; you could put them into three different categories of styles wich are : </p>
