--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	</div>
 	<div class="content hideme showMeLeft" id="article4">
 		<h1>Role of Women</h1>
-		<h3>Why the shit, how the shit, when the shit</h3>
+		<h3>Was women even important?</h3>
 		<p>
 		  The Romantic Era was a time of complete social and political upheaval. While today the divide that exists between men and women is slowly disappearing, during the late 18th century and early 19th century the position of women was subordinate to that of men.
 
