--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 
 		<p>Other artist would stay on the coast, which meant they would capture less big ships and more fishing boats and the life of them instead of the bigger explorer vessels </p>
 
-		<h3>Inshore</h3> <p>were often paintings of smaller vessels as it was harder for bigger ships to be close to shore. These were more common than paintings of large ships at sea because they only required a <br>smaller ship with a shore to make while the bigger ships usually required you to be on open sea or at harbors. </p>
-		<p> They would also be cheaper because they did not require the same amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era</p>e they did not require the same amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era</p>e amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era</p>did not require the same amount of time as the other ones did which caused them to be a bit more popular during the romantic era</p>	
+		<h3>Inshore</h3> <p> were often paintings of smaller vessels as it was harder for bigger ships to be close to shore. These were more common than paintings of large ships at sea because they only required a <br>smaller ship with a shore to make while the bigger ships usually required you to be on open sea or at harbors. </p>
+		<p> They would also be cheaper because they did not require the same amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era
 	</div>
 	
 	<script>
