--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<h1 id="contentPreLoader">Loading <span id="contentLiveLoader">...</span></h1>
 
 <div class="wrapper">
-	<div id="header_navbar">
+	<header id="header_navbar">
 		<nav>
 			<a class="nav_main_link" id="nav_title_link" href="#header">The Romantic Era</a>
 		</nav>
-		<header id="header_navbar_links">
+		<div id="header_navbar_links">
 			<a class="nav_main_link" href="#header">Home</a>
 			<a class="nav_main_link" href="#article1">Introduction - Mary Shelley</a>
 			<a class="nav_main_link" id="society" href="#article2">Society</a>
@@ -27,8 +27,8 @@
 			<a class="nav_main_link" id="woman" href="#article4">Role of Women</a>
 			<a class="nav_main_link" id="music" href="#article5">Music</a>
 			<a class="nav_main_link" id="art" href="#article6">Art</a>
-		</header>
-	</div>
+		</div>
+	</header>
 	<div id="header">
 		<video id="header_background" src="Joel.mp4" autoplay loop muted preload="auto"></video>
 		
