--- a/index.html
+++ b/index.html
@@ -2,23 +2,37 @@
 <html>
 <head>
 	<title>Romantic Era</title>
+	<!-- Begin importing scripts -->
 	<link rel="stylesheet" type="text/css" href="./style/omniV1.css">
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,800|Open+Sans:400" rel="stylesheet">
+	<!-- Eng importing style -->
+	
+	<!-- Importing Jquery Library from GoogleAPIs -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	
+	<!-- Begin importing scripts -->
 	<script type="text/javascript" src="./script/smooth.js"></script>
 	<script type="text/javascript" src="./script/navhider.js"></script>
 	<script type="text/javascript" src="./script/hideme.js"></script>
+	<script type="text/javascript" src="./script/sourcesdropdown.js"></script>
+	<!--End importing scripts -->
 </head>
 <body>
+	
+<!-- Creates the "Loading..." during page load -->
+<h1 id="contentPreLoader">Loading <span id="contentLiveLoader">...</span></h1>
 
-	<h1 id="contentPreLoader">Loading <span id="contentLiveLoader">...</span></h1>
-
+<!-- Wrapper used for hiding overflow on mobile -->
 <div class="wrapper">
+	<!-- Creating header and navbar -->
 	<header id="header_navbar">
 		<nav>
+			<!-- Leftmost link -->
 			<a class="nav_main_link" id="nav_title_link" href="#header">The Romantic Era</a>
 		</nav>
+		
+		<!-- Right bunch 'o' links -->
 		<div id="header_navbar_links">
 			<a class="nav_main_link" href="#header">Home</a>
 			<a class="nav_main_link" href="#article1">Introduction - Mary Shelley</a>
@@ -29,6 +43,8 @@
 			<a class="nav_main_link" id="art" href="#article6">Art</a>
 		</div>
 	</header>
+	
+	<!-- Creating video header background-->
 	<div id="header">
 		<video id="header_background" src="Joel.mp4" autoplay loop muted preload="auto"></video>
 		
@@ -38,16 +54,21 @@
 		<video style="display:none" src="melvin.mp4" muted preload="auto"></video>
 		<video style="display:none" src="Joel.mp4" muted preload="auto"></video>
 		<!-- Done Pre-loading -->
+		
+		<!-- Creating header Title -->
 		<h1 id="header_title">The Romantic Era</h1>
 
 	</div>
 	
+	<!-- Creating Translate item -->
 	<div id="google_translate_element"></div><script type="text/javascript">
 	function googleTranslateElementInit() {
 		new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 	}
 	</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	<!-- End Translate item -->
 	
+	<!-- Creating articles -->
 	<div class="content hideme showMeBottom viewed" id="article1">
 		<h1>Introduction - Mary Shelley</h1>
 		<h3>Phew, you made it here!</h3>
@@ -151,6 +172,7 @@
 		<p> They would also be cheaper because they did not require the same amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era
 	</div>
 	
+	<!-- DEPRECATED SCRIPT
 	<script>
 	 $("#society").click(function(){
 	     $("#header_background").attr('src', "Joel.mp4");
@@ -168,7 +190,9 @@
 	      $("#header_background").attr('src', "melvin.mp4");
 	  })
 	</script>
-	
+	 -->
+
+	<!-- Creating testing environment for comments pages -->
 	<div class="box content hideme showMeBottom">
 	<div id="disqus_thread"></div>	
 	<script>
@@ -184,6 +208,7 @@
 		})();	
 	</script>
 	</div>
+	<!-- End testing for comments -->
 </div>
 </body>
 </html>
