--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 	</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	<!-- End Translate item -->
 	
+	<!-- Creating back to top button -->
+	<a id="backTop" href="#header">Back to top</a>
+	
 	<!-- Creating articles -->
 	<div class="content hideme showMeBottom viewed" id="article1">
 		<h1>Introduction - Mary Shelley</h1>
