--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 		To wrap up, the Romantic Era was a huge part of creating the scientific grounds for the discoveries of today, with most of today’s large research topics originating from the era.<br><br>
 
 		---<br>
-		The technology and Science of the Romantic Era.<br>
-		This article was written by Pierre, 16TEKCS.<br></p>
-
+		<a href="#" class="sources-button">View sources</a>
+		<p class="sources">This is a source<br>this is a source</p>
+			
 	</div>
 	<div class="content hideme showMeLeft" id="article4">
 		<h1>Role of Women</h1>
