--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		To wrap up, the Romantic Era was a huge part of creating the scientific grounds for the discoveries of today, with most of today’s large research topics originating from the era.<br><br>
 
 		---<br>
-		<a href="#" class="sources-button">View sources</a>
+		<a class="sources-button">View sources</a>
 		<p class="sources">This is a source<br>this is a source</p>
 			
 	</div>
