--- a/index.html
+++ b/index.html
@@ -115,8 +115,11 @@
 
 		---<br>
 		<a class="sources-button">View sources</a>
-		<p class="sources">This is a source<br>this is a source</p>
-			
+		<ul class="sources">
+			<p>woah1</p>
+			<p>woah2</p>
+			<p>woah3</p>
+		</ul>
 	</div>
 	<div class="content hideme showMeLeft" id="article4">
 		<h1>Role of Women</h1>
