--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
 		To wrap up, the Romantic Era was a huge part of creating the scientific grounds for the discoveries of today, with most of today’s large research topics originating from the era.<br><br>
 
 		---<br>
-		<a class="sources-button">View sources</a>
-		<ul class="sources">
-			<p>woah1</p>
-			<p>woah2</p>
-			<p>woah3</p>
-		</ul>
+		<div class="sources-container">
+			<a class="sources-button">View sources</a>
+			<ul class="sources">
+				<p>woah1</p>
+				<p>woah2</p>
+				<p>woah3</p>
+			</ul>
+		</div>
 	</div>
 	<div class="content hideme showMeLeft" id="article4">
 		<h1>Role of Women</h1>
