--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
 		<br><br>
 		<h3>Mary Shelley</h3>
 		<br><br>
+		<br>
+		<div class="sources-container">
+			<a class="sources-button">View sources</a>
+			<ul class="sources">
+				<p>woah1</p>
+				<p>woah2</p>
+				<p>woah3</p>
+			</ul>
+		</div>
 	</div>
 	<div class="content hideme showMeLeft" id="article2">
 		<h1>Society</h1>
@@ -96,7 +105,17 @@
 		<p>The theatre was not the biggest in literature at this moment, because it was so many who read novels because that was the biggest around.
 		To round up this text, the romantic period was a bad time for the people who struggled a lot, the rich was the ones who ruled and had the power. 
 		The urbanisation was in its full movement and the big cities started to form, the life on the farms was no longer an option if you wanted to survive.</p>
+		<br>
+		<div class="sources-container">
+			<a class="sources-button">View sources</a>
+			<ul class="sources">
+				<p>woah1</p>
+				<p>woah2</p>
+				<p>woah3</p>
+			</ul>
+		</div>
 	</div>
+	
 	<div class="content hideme showMeRight" id="article3">
 		<h1>Science</h1>
 		<h3>What characterizes the Romantic Era in science?</h3>
@@ -113,7 +132,7 @@
 
 		To wrap up, the Romantic Era was a huge part of creating the scientific grounds for the discoveries of today, with most of today’s large research topics originating from the era.<br><br>
 
-		---<br>
+		<br>
 		<div class="sources-container">
 			<a class="sources-button">View sources</a>
 			<ul class="sources">
@@ -161,6 +180,15 @@
 
 
 		That is a small bit about the music of the romantic period. In the next part of the article, I am going to talk about the art during romantic period
+			<br>
+		<div class="sources-container">
+			<a class="sources-button">View sources</a>
+			<ul class="sources">
+				<p>woah1</p>
+				<p>woah2</p>
+				<p>woah3</p>
+			</ul>
+		</div>
 	</div>
 	<div class="content hideme showMeLeft" id="article6">
 		<h1>Art</h1>
@@ -178,6 +206,15 @@
 
 		<h3>Inshore</h3> <p> were often paintings of smaller vessels as it was harder for bigger ships to be close to shore. These were more common than paintings of large ships at sea because they only required a <br>smaller ship with a shore to make while the bigger ships usually required you to be on open sea or at harbors. </p>
 		<p> They would also be cheaper because they did not require the same amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era
+		<br>
+		<div class="sources-container">
+			<a class="sources-button">View sources</a>
+			<ul class="sources">
+				<p>woah1</p>
+				<p>woah2</p>
+				<p>woah3</p>
+			</ul>
+		</div>
 	</div>
 	
 	<!-- DEPRECATED SCRIPT
