--- a/index.html
+++ b/index.html
@@ -158,7 +158,15 @@
 		As examples the women were expected to obey their husband who at this time had the legal right to demand his wife. All income of the wife went straight to her husband and any property that the woman brought to the marriage became property of the man. Before marriage the family of the wife would pay a sum of money to the husband for taking her, objectifying women. Women also didn't have any legal custody over their children.
 
 		Throughout the Romantic Era the gender roles of the women in society had greatly changed. Previously only known for their abilities in the home, women throughout the industrial revolution began to work outside the home. Although their rights were transferred to their husbands upon marriage, the small changes in this era began the long struggle for equality which is still going today.
-
+		<br>
+		<div class="sources-container">
+			<a class="sources-button">View sources</a>
+			<ul class="sources">
+				<p>woah1</p>
+				<p>woah2</p>
+				<p>woah3</p>
+			</ul>
+		</div>
 		</p>
 	</div>
 	<div class="content hideme showMeRight" id="article5">
