--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<ul class="sources">
 				<p>woah1</p>
 				<p>woah2</p>
-				<p>woah3</p>
+				<p>This article was written by <b>Pierre, Joel, Melvin, Lucas K.</b></p>
 			</ul>
 		</div>
 	</div>
@@ -112,6 +112,7 @@
 				<p></p>
 				<a>http://www.wwnorton.com/college/english/nadrama/content/review/shorthistory/19c-present/romanticism.aspx</a>
 				<a>https://en.wikipedia.org/wiki/Romanticism</a>
+				<p>This article was written by <b>Joel</b></p>
 			</ul>
 		</div>
 	</div>
@@ -138,7 +139,7 @@
 			<ul class="sources">
 				<p>woah1</p>
 				<p>woah2</p>
-				<p>woah3</p>
+				<p>This article was written by <b>Pierre</b></p>
 			</ul>
 		</div>
 	</div>
@@ -164,7 +165,7 @@
 			<ul class="sources">
 				<p>woah1</p>
 				<p>woah2</p>
-				<p>woah3</p>
+				<p>This article was written by <b>Lucas K.</b></p>
 			</ul>
 		</div>
 		</p>
@@ -185,16 +186,13 @@
 		<p>Muzio was one of the major figures during the romantic period in the world of music. . He was the composer of piano music, chamber music, as well as symphonies.</p> they also did concerts in notable cities as Paris and St. Petersburg.</p>
 		<p> Clementi’s most notable work is the fact that he changed the way you could play piano as he was noted to be the first to create the compositions capable of expressing the entire capabilities</p>
 		<p> His works were often made as Piano sonata (which is works made for solo piano players) and he made around 100 of them, while other composers might have been more famous than Clementi his work was considered a lot harder to play than those made of Mozart.</p>
-
-
-		That is a small bit about the music of the romantic period. In the next part of the article, I am going to talk about the art during romantic period
-			<br>
+		<br>
 		<div class="sources-container">
 			<a class="sources-button">View sources</a>
 			<ul class="sources">
 				<p>woah1</p>
 				<p>woah2</p>
-				<p>woah3</p>
+				<p>This article was written by <b>Melvin</b></p>
 			</ul>
 		</div>
 	</div>
@@ -220,7 +218,7 @@
 			<ul class="sources">
 				<p>woah1</p>
 				<p>woah2</p>
-				<p>woah3</p>
+				<p>This article was written by <b>Melvin</b></p>
 			</ul>
 		</div>
 	</div>
