--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Romantic Era</title>
+	<title>The Romantic Era</title>
 	<!-- Begin importing scripts -->
 	<link rel="stylesheet" type="text/css" href="./style/omniV1.css">
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
