Fixed "go to top" links to match with HTML5 spec.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 		<!-- Right bunch 'o' links -->
 		<div id="header_navbar_links">
-			<a class="nav_main_link" href="#header">Home</a>
+			<a class="nav_main_link" href="#">Home</a>
 			<a class="nav_main_link" href="#article1">Introduction - Mary Shelley</a>
 			<a class="nav_main_link" id="society" href="#article2">Society</a>
 			<a class="nav_main_link" id="science" href="#article3">Science</a>
@@ -69,7 +69,7 @@
 	<!-- End Translate item -->
 	
 	<!-- Creating back to top button -->
-	<a id="backTop" href="#header">Back to top</a>
+	<a id="backTop" href="#">Back to top</a>
 	
 	<!-- Creating articles -->
 	<div class="content hideme showMeBottom viewed" id="article1">
