--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<!-- End Translate item -->
 	
 	<!-- Creating back to top button -->
-	<a id="backTop" href="#">Back to top</a>
+	<a id="backTop" href="#top">Back to top</a>
 	
 	<!-- Creating articles -->
 	<div class="content hideme showMeBottom viewed" id="article1">
