--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 		     <p> John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
 		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
 		Muzio Celmenti born 1752 - 1832<p>
-		<p>Muzio was one of the major figures during the romantic period in the world of music. . He was the composer of piano music, chamber music, as well as symphonies.</p> they also did concerts in notable cities as Paris and St. Petersburg.</p>
+		<p>Muzio was one of the major figures during the romantic period in the world of music. . He was the composer of piano music, chamber music, as well as symphonies.</p>They also did concerts in notable cities as Paris and St. Petersburg.</p>
 		<p> Clementi’s most notable work is the fact that he changed the way you could play piano as he was noted to be the first to create the compositions capable of expressing the entire capabilities</p>
 		<p> His works were often made as Piano sonata (which is works made for solo piano players) and he made around 100 of them, while other composers might have been more famous than Clementi his work was considered a lot harder to play than those made of Mozart.</p>
 		<br>
