Added author to sources tab

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<br><br>
 		<br>
 		<div class="sources-container">
-			<a class="sources-button">View sources</a>
+			<a class="sources-button">View sources & authors</a>
 			<ul class="sources">
 				<p>woah1</p>
 				<p>woah2</p>
@@ -107,7 +107,7 @@
 		The urbanisation was in its full movement and the big cities started to form, the life on the farms was no longer an option if you wanted to survive.</p>
 		<br>
 		<div class="sources-container">
-			<a class="sources-button">View sources</a>
+			<a class="sources-button">View sources & author</a>
 			<ul class="sources">
 				<br>
 				<a>http://www.wwnorton.com/college/english/nadrama/content/review/shorthistory/19c-present/romanticism.aspx</a>
@@ -135,7 +135,7 @@
 
 		<br>
 		<div class="sources-container">
-			<a class="sources-button">View sources</a>
+			<a class="sources-button">View sources & author</a>
 			<ul class="sources">
 				<br>
 				<a>https://www.bl.uk/romantics-and-victorians/themes/technology-and-science</a><br>
@@ -162,7 +162,7 @@
 		Throughout the Romantic Era the gender roles of the women in society had greatly changed. Previously only known for their abilities in the home, women throughout the industrial revolution began to work outside the home. Although their rights were transferred to their husbands upon marriage, the small changes in this era began the long struggle for equality which is still going today.
 		<br>
 		<div class="sources-container">
-			<a class="sources-button">View sources</a>
+			<a class="sources-button">View sources & author</a>
 			<ul class="sources">
 				<p>woah1</p>
 				<p>woah2</p>
@@ -189,7 +189,7 @@
 		<p> His works were often made as Piano sonata (which is works made for solo piano players) and he made around 100 of them, while other composers might have been more famous than Clementi his work was considered a lot harder to play than those made of Mozart.</p>
 		<br>
 		<div class="sources-container">
-			<a class="sources-button">View sources</a>
+			<a class="sources-button">View sources & author</a>
 			<ul class="sources">
 				<a https://en.wikipedia.org/wiki/Romantic_music </a> <br>
 				<a>https://en.wikipedia.org/wiki/Nocturne</a>
@@ -215,7 +215,7 @@
 		<p> They would also be cheaper because they did not require the same amount of time as the other ones did which caused them to be a bit <br> more popular during the romantic era</p>
 		<br>
 		<div class="sources-container">
-			<a class="sources-button">View sources</a>
+			<a class="sources-button">View sources & author</a>
 			<ul class="sources">
 				<br>
 				<a>https://en.wikipedia.org/wiki/British_Marine_Art_(Romantic_Era)</a>
