--- a/index.html
+++ b/index.html
@@ -77,7 +77,60 @@
 		<h3>Phew, you made it here!</h3>
 		
 		<p>It seems like you wanted to learn more about what the technology and science scene looked like back in the Romantic era.</p>
-		<p>As you may already know, the Romantic era, or age of reflection, was huge when it comes to scientists and intellectuals coming forward with their thoughts and discoveries.  Just as everyone was getting tired of the enlightment’s boring structure, the Romantic Era peeked its nose.</p>
+		
+		<h3>What are the characteristics of the Romantic Era?</h3>
+		<p>As should be rather obvious, during the Romantic Era, things were romanticized as far as humanly possible. 
+		Romanticism originated from the ruins of the Age of Enlightenment and the Industrial revolution. Just as the society was reaching our “modern enough”-seal, the Romantic Era kicked in.
+
+		The point of romanticizing texts, plays and other cultural works was to bring back up the morale of people, as it stagnated at an all-time-low because of the boring and work/development-focused Industrial revolution. As William Wordsworth said it: “the spontaneous overflow of powerful feelings”. Originality suddenly became the key to success, with a huge emphasis on women and children. This was also the first time that human ideals were stretched beyond what is naturally possible, as writers constantly tried to be the most sensual kid on the block.
+
+		The etymology behind the word “Romanticism” is still unclear. Many argue that it comes from the latin “roman”, even though it only commonly became popular centuries later.</p>
+
+		<h3>Who are the main authors? Major works?</h3>
+		<p>Some of the main authors from the period are:
+		Jane Austen
+		British writer who published major works like:
+			-    Sense and sensibility	(1811)
+			-    Pride and Prejudice	(1813)
+			-    Mansfield Park		(1814)
+			-    Emma			(1816)
+
+
+		William Blake
+		Mostly unrecognized but massively popular writer who created works for the church:
+
+
+		Lord Byron
+			-    Writer of poems like Don Juan or Childe Harold’s Pilgrimage
+			-    Father of the first ever programmer: Ada Lovelace
+
+
+
+		Edgar Allan Poe
+		Hugely popular literary critic and poem writer from Boston, MA, USA
+		Mary Shelley ⮧
+
+		The Romantic Period has much of the literature history such as Mary Shelley famous art “Frankenstein's monster” The novel was released in 1818 and is one of the most famous novels of all time and very popular until this day. Some of the biggest names in today's literature wrote in the Romantic Period, As i said Mary Shelley is a very big one there is also other people like William blake who wrote The Marriage Of Heaven And Hell and The Tyger. 
+
+		Mary was born on the 30th of August in 1797 and she married the poet Percy Bysshe Shelley in 1816 and her time of death was the 1st of February 1851. She died to brain cancer, in London, England. At the age of 24 she worked so hard to support her family, the novels she published was “Valpberga” and “The Last Man”. 
+
+		Frankenstein's Monster was released in 1818, and is about a monster creator named Victor Frankenstein, and the monster was 8 ft tall but had emotions like a real human and just wanted to fit in. This was the beginning of the gothic genre in literature and it became very big at the time. Not everyone wrote about the gothic genre though.
+
+		Mary`s parents were philosophers and she was born in an wealthy family, unfortunately her mom died several days after she was born so her dad had full responsibility all her life, and they were very close. Her father was William Godwin and he was a famous philosopher, her mother Mary Wollstonecraft was also a very famous feminist.</p>
+
+
+
+
+
+
+
+
+		<p>“It has seemed to me—and on such an evening, I have felt it,—that this world, endowed as it is outwardly with endless shapes and influences of beauty and enjoyment, is peopled also in its spiritual life by myriads of loving spirits; from whom, unawares, we catch impressions, which mould our thoughts to good, and thus they guide beneficially the course of events, and minister to the destiny of man. Whether the beloved dead make a portion of this holy company, I dare not guess; but that such exists, I feel." this is a poem from one of her last books called “In rambles in Germany and Italy “ , The meaning of this poem is to show the suffering she went through in her life as she was forced a lot of the time to write books because she really needed to get some money to be able to support a revolutionist called Fernando which she addmired a lot. Mareys books usually had political sides to it as her mother was a feminist and she took that into her works later on in her life.</p><br>    
+
+		<p>In this book you can really see the fact that she wants to write what she has in her heart but instead, not wanting to disrupt the flow of the book ( wanting to keep it a travel book which most of her works are ).   Considering that this book is based on her own life traveling through Italy and Germany.  I think that by this poem you can clearly see that she is trying to get things she thought about while traveling but tried to do it in a way so it doesn't affect the book is written.</p><br>
+
+		<p>I think that more people should read this just because of the fact that she tried to write the book from her feelings while still trying to get some sort of income from the book. Her works are very good to read as they will give  you a lot more insight on how other people had it during the romantic era. You will also get to know a lot about different places as her works are most Travel books which is a great thing as being knowledgeable about different places is a good trait to have. While she might not be the most famous author i think that people can still learn a lot of things from her.</p><br>
+
 		<br><br>
 		<h3>Mary Shelley</h3>
 		<br><br>
