--- a/index.html
+++ b/index.html
@@ -230,18 +230,19 @@
 	<div class="content hideme showMeRight" id="article5">
 		<h1>Music</h1>
 	<h3>Romantic Era Music and Art in England</h3>
-	  	  <h3> Music </h3>
+	  	  <h3>Music</h3>
 		<p>The music during the Romantic era became a lot more emotional and dramatic; it also expanded into philosophical themes.<br> Music written during this time could have had a meaning of revolting against the political and social norm during the previous time (The Age of Enlightment)</p>
 			<p>While there were most famous composers during this era, this article will have a focus on the English composers.</p>
 		<p>The music during the romantic period had two major figures those being </p>
 
-		<p> <h3>John Field born 1782-1837</h3>  </p>
-		     <p> John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
+		<h3>John Field born 1782-1837</h3>
+		
+		     <p>John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
 		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
-		Muzio Celmenti born 1752 - 1832<p>
+		<h3>Muzio Celmenti born 1752 - 1832<h3>
 		<p>Muzio was one of the major figures during the romantic period in the world of music. . He was the composer of piano music, chamber music, as well as symphonies.</p>They also did concerts in notable cities as Paris and St. Petersburg.</p>
-		<p> Clementi’s most notable work is the fact that he changed the way you could play piano as he was noted to be the first to create the compositions capable of expressing the entire capabilities</p>
-		<p> His works were often made as Piano sonata (which is works made for solo piano players) and he made around 100 of them, while other composers might have been more famous than Clementi his work was considered a lot harder to play than those made of Mozart.</p>
+		<p>Clementi’s most notable work is the fact that he changed the way you could play piano as he was noted to be the first to create the compositions capable of expressing the entire capabilities</p>
+		<p>His works were often made as Piano sonata (which is works made for solo piano players) and he made around 100 of them, while other composers might have been more famous than Clementi his work was considered a lot harder to play than those made of Mozart.</p>
 		<br>
 		<div class="sources-container">
 			<a class="sources-button">View sources & author</a>
