fixed the music link

--- a/index.html
+++ b/index.html
@@ -229,15 +229,20 @@
 	</div>
 	<div class="content hideme showMeRight" id="article5">
 		<h1>Music</h1>
+		
+		
 	<h3>Romantic Era Music and Art in England</h3>
 	  	  <h3>Music</h3>
 		<p>The music during the Romantic era became a lot more emotional and dramatic; it also expanded into philosophical themes.<br> Music written during this time could have had a meaning of revolting against the political and social norm during the previous time (The Age of Enlightment)</p>
 			<p>While there were most famous composers during this era, this article will have a focus on the English composers.</p>
 		<p>The music during the romantic period had two major figures those being </p>
-
+                 <audio controls>
+ 			 <source src="field.mp3" type="audio/mpeg">
+ 			 Your browser does not support the audio element.
+		</audio>
 		<h3>John Field born 1782-1837</h3>
 		
-		     <p>John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
+		 <p>John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
 		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
 		<h3>Muzio Celmenti born 1752 - 1832<h3>
 		<p>Muzio was one of the major figures during the romantic period in the world of music. . He was the composer of piano music, chamber music, as well as symphonies.</p>They also did concerts in notable cities as Paris and St. Petersburg.</p>
