--- a/index.html
+++ b/index.html
@@ -244,10 +244,13 @@
 		
 		 <p>John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
 		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
+		<br>
+		
 		<audio controls>
- 			<source src="celemnti.mp3" type="audio/mpeg">
+ 			<source src="clementi.mp3" type="audio/mpeg">
   			Your browser does not support the audio element.
 		</audio>
+		
 		<h3>Muzio Clementi born 1752 - 1832</h3>
 		<p>Muzio was one of the major figures during the romantic period in the world of music. . He was the composer of piano music, chamber music, as well as symphonies.</p>They also did concerts in notable cities as Paris and St. Petersburg.</p>
 		<p>Clementi’s most notable work is the fact that he changed the way you could play piano as he was noted to be the first to create the compositions capable of expressing the entire capabilities</p>
